Update ExtendedAnvilAdminMenu.java